force-app/main/default/objects/Adopter__c/fields/Adopter_Email__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Email__c</fullName>
    <label>Adopter Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>