force-app/main/default/objects/Adopter__c/fields/Adopter_Location__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Location__c</fullName>
    <label>Adopter Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>