force-app/main/default/objects/Adopter__c/validationRules/mandatory_adopter_name.validationRule-meta.xml
<ValidationRule>
    <fullName>mandatory_adopter_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Adopter_Email__c )</errorConditionFormula>
    <errorDisplayField>Adopter_Email__c</errorDisplayField>
    <errorMessage>Adopter&apos;s Email is mandatory</errorMessage>
</ValidationRule>